<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Real Estate Manager</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_add">Add</string>
    <string name="action_update">Update</string>
    <string name="action_search">Search</string>
    <string name="menu_home" translatable="false">Real Estate Manager</string>
    <string name="menu_home_drawer">Home</string>
    <string name="menu_add_agent">Add agent</string>
    <string name="menu_settings">Settings</string>
    <string-array name="house_type">
        <item>Apartment</item>
        <item>Castle</item>
        <item>Duplex</item>
        <item>Luxury Apartment</item>
        <item>Luxury House</item>
        <item>Penthouse</item>
        <item>Prestige Residence</item>
        <item>Private Mansion</item>
    </string-array>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
    </string>
    <string name="agent_photo">Agent photo</string>
    <string name="first_name">First name</string>
    <string name="name">Name</string>
    <string name="phone">Phone number</string>
    <string name="mail" translatable="false">Email</string>
    <string name="add">Add</string>
    <string name="add_house_image">add house image</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="address">Address</string>
    <string name="price">Price</string>
    <string name="surface">Surface</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="description" translatable="false">Description</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="points_of_interests">Points of interests</string>
    <string name="menu_update">Update agent</string>
    <string name="agent_in_charge">Agent in charge</string>
    <string name="photo_description">Photo description</string>
    <string name="cancel">Cancel</string>
    <string name="update_photo">Update photo</string>
    <string name="published_date">Published on:</string>
    <string name="sold_on">Sold on:</string>
    <string name="m2" translatable="false">m<sup><small>2</small></sup></string>
    <string name="credit_simulator">Credit simulator</string>
</resources>