<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home_drawer" />
        <item
            android:id="@+id/nav_add_agent"
            android:icon="@drawable/ic_baseline_person_add_24"
            android:title="@string/menu_add_agent" />
        <item
            android:id="@+id/nav_credit_simulator"
            android:icon="@drawable/ic_baseline_calculate_24"
            android:title="@string/credit_simulator" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
    </group>
</menu>