<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/action_add"
        android:icon="@drawable/ic_baseline_add_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/action_update"
        android:icon="@drawable/ic_baseline_create_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom" />
</menu>