<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.openclassrooms.realestatemanager.ui.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add_agent"
        android:name="com.openclassrooms.realestatemanager.ui.fragments.AddAgentFragment"
        android:label="@string/menu_add_agent"
        tools:layout="@layout/fragment_add_agent" >
        <action
            android:id="@+id/action_nav_add_agent_to_nav_update_agent3"
            app:destination="@id/nav_update_agent" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.openclassrooms.realestatemanager.ui.fragments.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_update_agent"
        android:name="com.openclassrooms.realestatemanager.ui.fragments.UpdateAgentFragment"
        android:label="@string/menu_update"
        tools:layout="@layout/fragment_update_agent" >
        <argument
            android:name="currentAgent"
            app:argType="com.openclassrooms.realestatemanager.model.Agent" />
        <action
            android:id="@+id/action_nav_update_agent_to_nav_add_agent3"
            app:destination="@id/nav_add_agent" />
    </fragment>

</navigation>