<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="30dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="30dp"
    android:layout_gravity="center_horizontal">

    <ImageView
        android:id="@+id/dialog_add_house_photo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/agent_photo"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_baseline_home_24"
        style="@style/agent_photo_style"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_add_house_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_add_house_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_add_house_description_et"
            android:hint="@string/photo_description"
            android:inputType="text"
            style="@style/agent_first_name_style"
            android:nextFocusDown="@+id/agent_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/dialog_add_house_btn_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/dialog_add_house_description_input"
        android:layout_gravity="center">

        <Button
            android:id="@+id/dialog_add_house_add_button"
            app:layout_constraintTop_toBottomOf="@id/agent_email_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/agent_delete_button"
            android:hint="@string/add"
            app:cornerRadius="20dp"
            android:nextFocusDown="@+id/agent_delete_button"
            style="@style/agent_item_btn_style"/>

        <Button
            android:id="@+id/dialog_add_house_cancel_button"
            app:layout_constraintTop_toBottomOf="@id/agent_email_input"
            app:layout_constraintStart_toStartOf="@id/agent_add_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/cancel"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            style="@style/agent_item_btn_style"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>