<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.update_house_photo.UpdateHousePhotoFragment"
    android:layout_margin="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/update_house_photo"
        android:contentDescription="@string/add_house_image"
        style="@style/add_house_image_style"
        android:layout_gravity="center_horizontal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_house_photo_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/add_house_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/update_house_photo_description_et"
            android:hint="@string/photo_description"
            android:inputType="text"
            style="@style/agent_first_name_style"
            android:nextFocusDown="@+id/agent_name"/>

    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/update_house_add_photo_button"
            app:layout_constraintTop_toBottomOf="@id/add_house_photo_description_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:hint="@string/update_photo"
            app:cornerRadius="20dp"
            style="@style/add_house_photo_btn_style"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>